packages/ds/styles/src/styles/globals.css
@layer base, utilities;

@layer base {
  /* Reset básico */
  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  html {
    /* 1rem = 4px */
    font-size: 4px;
  }

  html,
  body {
    margin: 0;
    padding: 0;
  }

  body {
    font-family: var(--ds-font-family);
    font-size: var(--ds-font-size-md);
    line-height: 1.5;
    color: var(--ds-fg);
    background-color: var(--ds-bg);
  }

  .ds-vstack {
    display: flex;
    flex-direction: column;
    gap: 2x;
  }

}

